FIX:スイッチボックスが他要素に隠れるのでz-index指定

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -857,6 +857,7 @@ p {
   position: absolute;
   top: 50px;
   right: 0;
+  z-index: 3;
 }
 
 /*クリックで中身を表示*/
